// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-voiceops destination: sendCallCompleted action - all fields 1`] = `
Object {
  "agent_email": "bah@curoj.cw",
  "call_id": "PdayLkf!",
  "call_started_at": "PdayLkf!",
  "channels": Array [
    Object {
      "channel": -4911932045787136,
      "first_name": "PdayLkf!",
      "identifier": "PdayLkf!",
      "last_name": "PdayLkf!",
      "recording_start_time": "2082-03-02T00:19:30.144Z",
      "type": "CONTACT",
    },
  ],
  "extraMetadata": Object {
    "testType": "PdayLkf!",
  },
  "first_name": "PdayLkf!",
  "last_name": "PdayLkf!",
  "recording_url": "https://example.com/audio.wav",
}
`;

exports[`Testing snapshot for actions-voiceops destination: sendCallCompleted action - required fields 1`] = `
Object {
  "agent_email": "bah@curoj.cw",
  "call_id": "PdayLkf!",
  "call_started_at": "PdayLkf!",
  "recording_url": "https://example.com/audio.wav",
}
`;
